@@ -4,6 +4,12 @@
 
 * Improvements and additions:
 
+  - Part of the startup code is now optional and has been moved from
+    gcrt1.S to the device support lib lib<mcu>.a.  When the respective
+    parts of the startup code are not wanted, a specific symbol can be
+    defined so that the associated code is no more pulled in.
+    o  Define symbol __init_sp to skip initialization of SP in .init2.
+
   - Support a new header <avr/flash.h> for better support of avr-gcc's
     named address spaces __flash and __flashx.  For example, it provides
     functions like <tt>strcpy_F</tt> and <tt>strcpy_FX</tt> that work
